Alerta al apretar el boton

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Taller 7.2.2</title>
   </head>
   <body>
-    <button>Saludar</button>
+    <button onclick="alert('Hola!')">Saludar</button>
   </body>
 </html>
