--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taller 7.2.2</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button onclick="alert('Hola!')">Saludar</button>
+    <div class="container">
+      <button onclick="alert('Hola!')">Saludar</button>
+    </div>
   </body>
 </html>
+<script src="eventos.js"></script>
